# word-counter

./: README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: code-quality.yaml
src/word_counter/: with_type_hints.py  without_type_hints.py
tests/unit_tests/: test_with_type_hints.py  test_without_type_hints.py
