[tool.poetry]
authors = ["billydaly-qbiz <billy.daly@qbizinc.com>"]
description = "Sample word count app to demo python type hints"
license = "MIT License"
name = "word-counter"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.10.7"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^3.9.2"
liccheck = "^0.6.2"
mdformat = "^0.7.7"
pre-commit = "^2.13.0"
pylint = "^2.9.6"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
safety = "^1.10.3"
tox = "^3.24.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

# configures some basic black settings per this article:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/
[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | env
)/
'''
include = '\.pyi?$'
line-length = 79
[tool.liccheck]
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "new bsd license",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache license 2.0",
  "apache software license",
  "apache software",
  "gnu lgpl",
  "gnu lesser general public license v2 (lgplv2)",
  "gnu general public license v2 (gplv2)",
  "gnu library or lesser general public license (lgpl)",
  "lgpl with exceptions or zpl",
  "isc license",
  "isc license (iscl)",
  "mit",
  "mit license",
  "mozilla public license 2.0 (mpl 2.0)",
  "public domain",
  "python software foundation license",
  "python software foundation",
  "zpl 2.1",
  "gpl v3",
]

# list any specifically unauthorized licenses here
unauthorized_licenses = []

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "C0114", # Disables module docstrings
  "R0903", # Disables too few public methods
  "E0611", # Disables no name in module
  "C0115", # Disables no class docstring
]
